jerry-core/parser/js/new-parser/tests/js/strict-mode/function-eval-strict.js.expected

--- Script parsing start ---


--- Function parsing start ---

  Note: legacy (non-strict) argument definition

  [  1] CBC_PUSH_NUMBER_1 number:1
  [  0] CBC_RETURN

Final byte code dump:

  Maximum stack depth: 2
  Flags: [small_lit_enc,no_lexical_env]
  Argument range end: 1
  Register range end: 1
  Identifier range end: 1
  Const literal range end: 1
  Literal range end: 1

   0 : CBC_PUSH_NUMBER_1 number:1
   2 : CBC_RETURN

Byte code size: 3 bytes

--- Function parsing end ---


--- Function parsing start ---

  Note: legacy (non-strict) argument definition

  [  1] CBC_PUSH_NUMBER_1 number:2
  [  0] CBC_RETURN

Final byte code dump:

  Maximum stack depth: 2
  Flags: [small_lit_enc,no_lexical_env]
  Argument range end: 1
  Register range end: 1
  Identifier range end: 1
  Const literal range end: 1
  Literal range end: 1

   0 : CBC_PUSH_NUMBER_1 number:2
   2 : CBC_RETURN

Byte code size: 3 bytes

--- Function parsing end ---


--- Function parsing start ---

  Note: legacy (non-strict) argument definition

  Note: switch to strict mode


--- Script parsing end ---

Parse error 'Non strict argument definition.' at line: 7 col: 37
